# cmd/docs/swagger.yaml
@@ -117,6 +117,21 @@ definitions:
       status:
         type: integer
     type: object
+  database.Group:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      modified_at:
+        type: string
+      name:
+        type: string
+      pic_url:
+        type: string
+    type: object
   database.Media:
     properties:
       media_type:
@@ -193,7 +208,7 @@ info:
   version: "1.0"
 paths:
   /v1/auth/check-username:
-    post:
+    get:
       consumes:
       - application/json
       description: Cheack Username Availability
@@ -557,6 +572,39 @@ paths:
           schema:
             $ref: '#/definitions/api.errorslope'
       summary: Get group members
+      tags:
+      - Friendship
+  /v1/firendship/group/get/{id}:
+    get:
+      description: Responds with json
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/database.Group'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.errorslope'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/api.errorslope'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.errorslope'
+      security:
+      - ApiKeyAuth: []
+      summary: Get Group by id
       tags:
       - Friendship
   /v1/firendship/group/remove-member:
